# Annual_Project_2020

./: .gitignore  Charte graphique .docx  FlashAssistance.docx  PlanDev.docx  RACI.xlsx  README.md  Test.pkt  annuel.mdj  db.sql  descC.docx  descWeb.docx  exportcmd.bat  flashassistance.sql
C_APP_REGISTRATION/: C_APP REGISTRATION.cbp  C_APP REGISTRATION.depend  C_APP REGISTRATION.layout  login2-0.glade  main.c  savepng.c
C_APP_REGISTRATION_LINUX/: CMakeLists.txt  config.db  login3-0.glade  main.c  savepng.c  savepng.h
C_APP_REGISTRATION_LINUX/cmake/: Findsodium.cmake
Documentation/: Charte graphique .docx  GanttProject.gan  PlanDev.docx  TabFonct.docx  descC.docx
QrCode/: QrCode.cbp  QrCode.depend  QrCode.layout  SDL_rect.cbp  SDL_rect.depend  SDL_rect.layout  login2-0.glade  main.c  main.cpp  stdout.txt
SQL_PARSER/: FINAL.sql  SQL PARSER.cbp  SQL PARSER.depend  SQL PARSER.layout  importsql.bat  main.c
WebApp/: .gitignore  AddServiceValidator.php  DbManager.php  ImageValidator.php  InputValidator.php  LoginValidator.php  SignupValidator.php  addCategory.php  addServices.js  addServices.php  addSub.js  addWebGL.php  autoload.php  cart.php  category.js  changeLang.php  charge.js  charge.php  checkYourAccount.php  clientManagement.php  composer.json  config.php  db.sql  expressPay.php  footer.js  footer.php  fpdf.php  header.js  header.php  lang.php  localization.php  login.php  logout.php  main.php  partnerManagement.php  payment.php  paymentCart.php  paymentSub.php  search.php  services.php  (+8 more)
javafxapp/: .gitignore  build.gradle  settings.gradle
(+43 files in other folders)
